# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  tests.yml
page_loader/: __init__.py  cli_args.py  common.py  html_downloader.py  loader.py  logger.py  page_loader.py  resource_downloader.py  resources.py  support_functions.py
page_loader/scripts/: page_loader.py
tests/: test_download.py  test_download_images.py  test_download_resources.py
tests/fixtures/: badcode-ru-docker-fixture.html  courses.html  images_fixture_after.html  images_fixture_before.html  ru-hexlet-io-courses.html  ru-hexlet-io.html
tests/fixtures/after/: ru-hexlet-io.html
tests/fixtures/images_download_test/: images-fixture-after.html  images-fixture-before.html
tests/fixtures/resources_download_test/: ru-hexlet-io.html  runtime.js
tests/fixtures/resources_download_test/after/: ru-hexlet-io-courses.html
