[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page-loader - the CLI-utility for downloading internet pages including all resources"
authors = ["denis <yudaev1@gmail.com>"]
packages = [
    { include = "page_loader"}
]
repository = "https://github.com/sound-round/python-project-lvl3.git"
readme = "README.md"
keywords = [
    "Python",
    "Education",
    "internet",
    "download",
    "Hexlet"
]
license = "MIT"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
